# milkshake

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  clipboard.rs  google.rs  main.rs  output.rs
tests/: help.rs
